# field-interference-network

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark_fin.py
examples/: benchmark.py  demo.py  reproduce_xor.py
fin/core/: field_element.py  fin_system.py
fin/gnn/: sparse_coupler.py
fin/hdc/: hypervector.py
fin/memory/: ssm_memory.py
fin/meta/: train_meta.py
fin/topology/: meta_topology.py
genesis_field_network/: __init__.py  core.py
tests/: conftest.py  test_classification.py  test_field_element.py  test_fin.py  test_genesis_field_network.py  test_integration.py  test_phase_adapter.py  test_resonance_coupler.py  test_serialization.py  test_topological_morpher.py
